--- a/src/app/resources/views/auth/signup.njk
+++ b/src/app/resources/views/auth/signup.njk
@@ -1,5 +1,34 @@
 {% extends "layouts/auth.njk" %}
 
 {% block body %}
-  <h1>Layout with NJK!</h1>
+  <form action="signup" method="post" enctype="multipart/form-data">
+    <label for="avatar">
+      <img src="/images/avatar.svg" heigh="30" />
+    </label>
+
+    <input id="avatar" name="avatar" type="file" />
+
+    <input id="name" name="name" type="text" placeholder="Nome Completo" />
+    <input id="email" name="email" type="email" placeholder="E-mail" />
+    <input id="password" name="password" type="password" placeholder="Senha" />
+
+    <label for="provider">
+      <input id="provider" name="provider" type="checkbox" value="1" />
+      Sou cabeleireiro
+    </label>
+
+    <button type="submit">Criar Conta</button>
+
+    <a href="/">Já possuo conta</a>
+  </form>
+
+  <script type="text/javascript">
+    var avatarInput = document.getElementById('avatar')
+    var image = document.querySelector('label[for=avatar] img')
+
+    avatarInput.onchange = function (e) {
+      image.classList.add('preview')
+      image.src = URL.createObjectURL(e.target.files[0])
+    }
+  </script>
 {% endblock %}
