--- a/src/app/resources/views/dashboard.njk
+++ b/src/app/resources/views/dashboard.njk
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <h1>Dashboard</h1>
-  </body>
-</html>
+{% extends "layouts/default.njk" %}
+
+{% block body %}
+  <h3>Olá, {{ user.name }}!</h3>
+  <br />
+  <a href="/app/signout">Sair</a>
+{% endblock %}
