agendamento de servicos - adicionado o recurso de visualizar datas/horarios disponiveis para agendamento

--- a/src/app/resources/views/dashboard.njk
+++ b/src/app/resources/views/dashboard.njk
@@ -17,7 +17,7 @@
             <img src="/app/files/{{ provider.avatar }}" />
             <strong>{{ provider.name }}</strong>
           </div>
-          <a href="">+</a>
+          <a href="/app/appointments/new/{{ provider.id }}">+</a>
         </li>
       {% endfor %}
     </ul>
