--- a/src/app/resources/views/partials/head.njk
+++ b/src/app/resources/views/partials/head.njk
@@ -4,4 +4,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Bootcamp | Challenge 2 | {{ title }}</title>
   <link rel='stylesheet' href='/styles/style.css' />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
