logout - ajuste no nome da rota na tela de agendamentos

--- a/src/app/resources/views/appointments/create.njk
+++ b/src/app/resources/views/appointments/create.njk
@@ -6,7 +6,7 @@
       <div>
         <img src="/app/files/{{ user.avatar }}" class="img-rounded" />
       </div>
-      <span><a href="/app/logout">Sair</a></span>
+      <span><a href="/app/signout">Sair</a></span>
       <strong>{{ user.name }}</strong><span>Agende seu horário:</span>
     </div>
 
